adding email and google auth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,52 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        ".dart_tool": true,
+        ".idea": true,
+        ".vscode": true,
+        "android": true,
+        "ios": true,
+        "web": true,
+        "windows": true,
+        ".gitattributes": true,
+        ".metadata": true,
+        "LICENSE": true,
+        ".packages": true,
+        "food_ordering.iml": true,
+        "pubspec.lock": true,
+        "auth/.dart_tool": true,
+        "auth/.idea": true,
+        "auth/.vscode": true,
+        "auth/.packages": true,
+        "auth/auth.iml": true,
+        "auth/.metadata": true,
+        "auth/CHANGELOG.md": true,
+        "auth/LICENSE": true,
+        "auth/pubspec.lock": true
     },
-    "hide-files.files": []
+    "hide-files.files": [
+        ".dart_tool",
+        ".idea",
+        ".vscode",
+        "android",
+        "ios",
+        "web",
+        "windows",
+        ".gitattributes",
+        ".metadata",
+        "LICENSE",
+        ".packages",
+        "food_ordering.iml",
+        "pubspec.lock",
+        "auth/.dart_tool",
+        "auth/.idea",
+        "auth/.vscode",
+        "auth/.packages",
+        "auth/auth.iml",
+        "auth/.metadata",
+        "auth/CHANGELOG.md",
+        "auth/LICENSE",
+        "auth/pubspec.lock"
+    ]
 }
